Simplified project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ target_compile_options(
     PRIVATE -W -Wall -Wextra -pedantic -fPIC
 )
 
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/ph.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/precompiled.hpp)
 
 file(GLOB_RECURSE SOURCES src/*.cpp)
 target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
